--- a/theme/ecampus/css/moodle.css
+++ b/theme/ecampus/css/moodle.css
@@ -1,3 +1,5 @@
  .accesshide {position:absolute;left:-10000px;font-weight:normal;font-size:1em;}
     a.skip-block,
     a.skip {position: absolute;top: -1000em;font-size: 0.85em;text-decoration:none;}
+
+   .i-search { height: 28px; width: 28px; border: none; text-indent: -9999px; }
