--- a/theme/ecampus/css/layout/footer.less
+++ b/theme/ecampus/css/layout/footer.less
@@ -39,7 +39,11 @@ footer {
     }
     li {
         text-align: center;
-        width: 100px;
+        width: auto;
+        padding-right: 20px;
+    }
+    li:last-child {
+        padding-right: 0;
     }
 }
 
