Formatting changes mostly for course area and which page types have sidebar menu

--- a/theme/ecampus_custom/css/module/bucket.less
+++ b/theme/ecampus_custom/css/module/bucket.less
@@ -42,20 +42,6 @@
     }
     @media (max-width: 767px) { padding: 0 20px; }
 
-    .category_well {
-        display: block;
-        text-decoration: none;
-        padding: 15px 44px 15px 15px;
-        border: 1px #fff solid;
-        border-radius: 2px;
-        color: #720016;
-        font-size: 0.9em;
-        line-height: 1em;
-        background: #f1f1f1 url('../img/theme/course_arrow.png') no-repeat right 10px center;
-        margin: 0px 10px 10px 0px;
-        font-weight: 600;
-    }
-
     .last .category_well {
       margin-right: 0;
     }
@@ -80,6 +66,37 @@
     }
 
 
+}
+.category .info {
+        display: block;
+        float: left;
+        width: 220px;
+        height: 30px;
+        text-decoration: none;
+        padding: 15px 44px 15px 15px;
+        border: 1px #fff solid;
+        border-radius: 2px;
+        background: #f1f1f1 url('../img/theme/course_arrow.png') no-repeat right 10px center;
+        margin: 0px 20px 10px 0px;
+        font-weight: 600;
+}
+
+#region-main  .category h3
+{
+    font-weight: 600;
+    font-size: 0.9em;
+    line-height: 1em;
+    padding: 0;
+}
+.course_category_tree .category>.info .name
+{
+    background-image: none;
+}
+
+.category .info .name a
+{    
+    color: #720016;
+    text-decoration: none;
 }
 
 .divide {
