Changes to layout and styles as well as adding terms, privacy and contact pages.

--- a/theme/ecampus_custom/css/layout/layout.less
+++ b/theme/ecampus_custom/css/layout/layout.less
@@ -13,10 +13,14 @@
     margin: 0;
 }
 html, body {
-    height: auto;
+    height: 100%;
+    background-color: #e7e7e7;
 }
 .wrapper {
+    min-height: 100%;
     height: auto !important;
+    height: 100%;
+    margin: 0 auto -190px; /* the bottom margin is the negative value of the footer's height */
     @media (max-width: 767px) { margin: auto; }
 }
 footer, .push {
