--- a/theme/ecampus_custom/css/module/bucket.less
+++ b/theme/ecampus_custom/css/module/bucket.less
@@ -10,7 +10,7 @@
 */
 
 
-#bucket {
+#region-main {
    .bucket-head {
        margin-top: 20px;
        font-size: 0.9em;
@@ -70,10 +70,10 @@
 .category .info {
         display: block;
         float: left;
-        width: 232px;
+        width: 275px;
         height: 30px;
         text-decoration: none;
-        padding: 15px 44px 15px 15px;
+        padding: 15px 0px 15px 15px;
         border: 1px #fff solid;
         border-radius: 2px;
         background: #f1f1f1 url('../img/theme/course_arrow.png') no-repeat right 10px center;
@@ -97,6 +97,8 @@
 {    
     color: #720016;
     text-decoration: none;
+    display: block;
+    padding-right: 45px;
 }
 
 .divide {
