--- a/theme/ecampus_custom/css/module/module.less
+++ b/theme/ecampus_custom/css/module/module.less
@@ -4,8 +4,7 @@
 .rounded-block {
     border: 1px solid #d3d3d3;
     .border-radius(5px);
-    padding: 10px;
-    margin: 10px 5px;
+    margin-bottom: -1px;
 }
 
 #catalogueDetail .rounded-block 
